--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JavaScript Quiz</title>
-    <link rel="stylesheets" href="./assets/style.css">
+    <link rel="stylesheet" href="./assets/style.css" />
 </head>
 <body>
     <header>
@@ -25,7 +25,7 @@
             <h1></h1>
             <p></p>
             <button class="start-button">
-
+                Start Quiz
             </button>
             
         </section>
