completed timer function

--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 </head>
 <body>
     <header>
-            <div class="scores"><!--create classes for JS-->
-                View High Scores
-            </div>
+            <nav class="scores"><!--create classes for JS-->
+                <a href="">View High Scores</a> 
+            </nav>
             <h1>JavaScript Quiz</h1>
             <div class="timer"><!--create classes for JS-->
-                Timer:
+                Timer: 1:00
             </div>
         
     </header>
@@ -39,6 +39,9 @@
         </section>
 
     </main>
+    <footer>
+        Correct!
+    </footer>
     <script src="assets/script.js"></script>
 </body>
 </html>
