created for loop function to go to next question when choice clicked

--- a/quiz.html
+++ b/quiz.html
@@ -22,15 +22,13 @@
     <main>
 
         <section id="container"><!--create id for CSS. Class for JS-->
-            <h2>Question #</h2>
+        <div id="question-container" class="hidden">
             <p class="question">Question</p>
             <div class="answers" id="answers"><!--create id for CSS. Class for JS-->
-                <button>Answer 1.</button>
-                <button>Answer 2.</button>
-                <button>Answer 3.</button>
-                <button>Answer 4.</button>
             </div>
-            <div>
+        </div>
+            <div id="start-screen">
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deleniti debitis iste, aliquid ducimus itaque ipsam quam aspernatur. Sed possimus quo, dicta totam quibusdam tempora, reprehenderit eaque nemo voluptate quaerat similique.</p>
                 <button id="start" class="start-button"><!--create id for CSS. Class for JS-->
                     Start Quiz
                 </button>
