added loacal storage

--- a/quiz.html
+++ b/quiz.html
@@ -37,8 +37,8 @@
         </section>
 
     </main>
-    <footer>
-        Correct!
+    <footer class="hidden" class="incorrect">
+        <!--Correct!-->
     </footer>
     <script src="assets/quiz.js"></script>
 </body>
