added answer feedback in footer

--- a/quiz.html
+++ b/quiz.html
@@ -37,7 +37,7 @@
         </section>
 
     </main>
-    <footer class="hidden" class="incorrect">
+    <footer class="hidden" id="feedback">
         <!--Correct!-->
     </footer>
     <script src="assets/quiz.js"></script>
