--- a/score.html
+++ b/score.html
@@ -17,16 +17,16 @@
         <section id="container"><!--create id for CSS.-->
             <h2>High Scores</h2>
             <p></p>
-            <table class="scores"><!--create id for CSS. Class for JS-->
-                <tr>
-                    <th>Initials</th>
-                    <th class="scores">Score</th>
-                </tr>
-                <tr>
-                    <td>PJ</td>
-                    <td class="scores">  </td>
-                </tr>
-            </table>
+            <div class="scores"><!--create id for CSS. Class for JS-->
+                <ul><!--change to ul-->
+                    <li>Initials</li>
+                    <li class="scores">Score</li>
+                </ul>
+                <ul>
+                    <li>PJ</li>
+                    <li class="scores">  </li>
+                </ul>
+            </div>
             <div>
                 <button><!--create id for CSS. Class for JS-->
                     Submit
