added link to new html scores page

--- a/score.html
+++ b/score.html
@@ -19,12 +19,12 @@
             <p></p>
             <div class="scores"><!--create id for CSS. Class for JS-->
                 <ul><!--change to ul-->
-                    <li>Initials</li>
-                    <li class="scores">Score</li>
+                    <li class="initials">Initials</li>
+                    <li></li>
                 </ul>
                 <ul>
-                    <li>PJ</li>
-                    <li class="scores">  </li>
+                    <li class="scores">Scores</li>
+                    <li></li>
                 </ul>
             </div>
             <div>
