create input for initials

--- a/quiz.html
+++ b/quiz.html
@@ -34,6 +34,16 @@
                 </button>
                 
             </div>
+
+            <div id="initials" class="hidden">
+                <h2 id="scores"></h2>
+                
+                    <p>Please enter your initials.</p>
+                <input/>
+
+                    <button id="submit">Submit</button>
+
+            </div>
         </section>
 
     </main>
