submit button function to go to score page

--- a/quiz.html
+++ b/quiz.html
@@ -39,7 +39,7 @@
                 <h2 id="scores"></h2>
                 
                     <p>Please enter your initials.</p>
-                <input/>
+                <input id="initials"/>
 
                     <button id="submit">Submit</button>
 
