--- a/score.html
+++ b/score.html
@@ -9,7 +9,13 @@
 </head>
 <body>
     <header>
-            <h1>JavaScript Quiz Scores</h1>       
+        <nav class="link"><!--create classes for JS-->
+            <a href="./quiz.html">Back to Quiz</a> 
+        </nav>
+            <h1>JavaScript Quiz Scores</h1>
+            <div>
+                <p> </p>
+            </div>
     </header>
 
     <main>
@@ -19,18 +25,15 @@
             <p></p>
             <div class="scores"><!--create id for CSS. Class for JS-->
                 <ul><!--change to ul-->
-                    <li class="initials">Initials</li>
-                    <li></li>
+                    <li>Initials</li>
+                    <li class="initials">PJ</li>
                 </ul>
                 <ul>
-                    <li class="scores">Scores</li>
-                    <li></li>
+                    <li>Scores</li>
+                    <li class="scores">50</li>
                 </ul>
             </div>
             <div>
-                <button><!--create id for CSS. Class for JS-->
-                    Submit
-                </button>
                 
             </div>
         </section>
