changed file name from quiz to index so it can deploy properly.

--- a/score.html
+++ b/score.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <nav class="link"><!--create classes for JS-->
-            <a href="./quiz.html">Back to Quiz</a> 
+            <a href="./index.html">Back to Quiz</a> 
         </nav>
             <h1>JavaScript Quiz Scores</h1>
             <div>
