--- a/score.html
+++ b/score.html
@@ -26,11 +26,11 @@
             <div class="scores"><!--create id for CSS. Class for JS-->
                 <ul><!--change to ul-->
                     <li>Initials</li>
-                    <li class="initials">PJ</li>
+                    <li class="initials"></li>
                 </ul>
                 <ul>
                     <li>Scores</li>
-                    <li class="scores">50</li>
+                    <li class="scores"></li>
                 </ul>
             </div>
             <div>
