--- a/score.html
+++ b/score.html
@@ -22,20 +22,9 @@
 
         <section id="container"><!--create id for CSS.-->
             <h2>High Scores</h2>
-            <p></p>
-            <div class="scores"><!--create id for CSS. Class for JS-->
-                <ul><!--change to ul-->
-                    <li>Initials</li>
-                    <li class="initials"></li>
-                </ul>
-                <ul>
-                    <li>Scores</li>
-                    <li class="scores"></li>
-                </ul>
-            </div>
-            <div>
-                
-            </div>
+            <ul class="scores">
+            </ul>
+            <button id="clear"> Clear Scores</button>
         </section>
 
     </main>
